--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -482,7 +482,7 @@ table tr:nth-child(2n+1){
     .user-btn{
         width: 100%;
         height: 100px;
-        min-height: 0px;
+        min-height: none;
         margin: 20px 0;
     }
 
