--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -8,6 +8,12 @@ body {
     font-size: 14px;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1 {
     font-family: 'Dancing Script';
     font-weight: 500;
@@ -201,26 +207,26 @@ nav {
     width: 100%;
 }
 
+table{
+    width: 100%;
+}
+
 tr {
     height: 45px;
-    border-radius: 14px;
+    font-size: 1vw;
+    width: 100%;
 }
 
 th {
-    width: 140px;
     font-weight: 600;
-    font-size: 1vw;
     vertical-align: middle;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 td {
     font-weight: 300;
-    font-size: 1vw;
     vertical-align: middle;
-    padding: 0 20px;
-    height: 45px;
-    max-height: 45px;
+    padding: 0 10px;
 }
 
 td img {
@@ -240,10 +246,9 @@ tr td:first-child {
 tr th:last-child,
 tr td:last-child {
     border-radius: 0 12px 12px 0;
-    width: 20%;
 }
 
-table tr:nth-child(2n+1) {
+tr:nth-child(2n+1) {
     background: rgba(139, 198, 223, 0.25);
 }
 
@@ -410,9 +415,9 @@ table tr:nth-child(2n+1) {
     }
 
     .dashboard {
-        margin: 0 auto;
         width: 100%;
-        padding: 5vw;
+        padding: 1vw;
+        box-sizing: border-box;
     }
 
     .content {
@@ -427,7 +432,6 @@ table tr:nth-child(2n+1) {
     td,
     th {
         font-size: 1.4rem;
-        width: 20%;
         box-sizing: border-box;
         padding: 0 0 0 3vw;
     }
@@ -437,6 +441,11 @@ table tr:nth-child(2n+1) {
         border-radius: 0 12px 12px 0;
         box-sizing: border-box;
         padding: 0 0 0 3vw;
+    }
+
+    tr th:nth-child(4),
+    tr td:nth-child(4) {
+        display: none;
     }
 
     .displ {
