--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -320,6 +320,16 @@ nav {
     transition: ease-in 0.8s;
 }
 
+.menu{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30vw;
+    height: 100vh;
+    background: black;
+    opacity: 0.90;
+}
+
 @media screen and (max-width:1024px) and (min-width:500px) {
 
     html {
