--- a/Site/css/user.css
+++ b/Site/css/user.css
@@ -126,7 +126,7 @@ table tr:nth-child(2n+1) {
 .tr {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     height: 45px;
     font-size: 1em;
     width: 100%;
@@ -134,7 +134,12 @@ table tr:nth-child(2n+1) {
 }
 
 .tr .cell {
-    /* width: 19%; */
+    padding: 0 3%;
+    box-sizing: border-box;
+}
+
+.tr .plate-number {
+    margin: 0 auto;
     padding: 0 3%;
     box-sizing: border-box;
 }
