--- a/Site/css/user.css
+++ b/Site/css/user.css
@@ -10,6 +10,12 @@ body {
     justify-content: center;
 }
 
+iframe {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 h1 {
     font-family: 'Dancing Script';
     font-weight: 500;
