--- a/Site/css/login.css
+++ b/Site/css/login.css
@@ -83,6 +83,16 @@ input[type="submit"] {
 
 }
 
+.error {
+    color: red;
+    font-size: 1em;
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
 @media screen and (max-width:500px) {
 
     html {
