--- a/Site/css/modal.css
+++ b/Site/css/modal.css
@@ -100,12 +100,22 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-.formError{
+.formError {
   display: none;
   color: red;
   font-size: x-small;
 }
 
-.err{
+.err {
   display: block;
+}
+
+@media screen and (max-width:500px) {
+
+  .addUser input[type="text"],
+  input[type="password"] {
+    height: 50px;
+    width: 90%;
+    padding-left: 20px;
+  }
 }
