--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -352,6 +352,7 @@ nav {
 
     html {
         font-size: 10px;
+        overflow-x: hidden;
     }
 
     h1 {
@@ -489,8 +490,11 @@ nav {
 
 @media screen and (max-width:500px) {
 
+
+
     html {
         font-size: 10px;
+        overflow-x: hidden;
     }
 
     .title {
@@ -639,4 +643,43 @@ nav {
     tr {
         width: 100%;
     } */
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 30vw;
+        height: 100vh;
+        background: black;
+        opacity: 0.90;
+        transition: all 1s ease;
+    }
+
+    .sub-menu {
+        width: 100%;
+        padding: 1% 10%;
+        color: white;
+    }
+
+    .menu-header {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .menu-header .menu-close {
+        width: fit-content;
+        margin: 5%;
+        transition: all 1s ease;
+    }
+
+    .menu-header hr {
+        width: 100%;
+    }
+
+    .menu-body h2 {
+        margin: 10px 0;
+    }
 }
