--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -59,9 +59,11 @@ nav {
 }
 
 .logs {
-    background-color: red;
     width: 90%;
     height: 50%;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -347,6 +349,8 @@ nav {
     filter: blur(3px);
     cursor: pointer;
 }
+
+
 
 @media screen and (max-width:1024px) and (min-width:500px) {
 
